home.css
body {
    margin: 0;
    overflow: hidden;
}

a:link, a:visited {
    color: lightskyblue;
}

h1 {
    color: white;
    font-family: 'Source Code Pro', monospace;
    text-align: center;
    font-size: 40px;
    margin-bottom: 10px;
    animation-name: TitleFade;
    animation-duration: 1s;
    /* grid-column: 1/ span 3;
    grid-row: 1; */
}

h3 {
    color: white;
    margin: 10px;
    font-family: 'Source Code Pro', monospace;
    font-weight: bold;
    font-style: italic;
    text-align: center;
    animation-name: HeadingFade;
    /* animation-delay: .2s; */
    animation-duration: 1s;
    /* opacity: 0%; */
    /* grid-column: 1/ span 3;
    grid-row: 1; */
}

@keyframes TitleFade {
    from{
        transform: translateY(-100%);
        opacity: 0%;
    }
    to{
        transform: translateY(0);
        opacity: 100%;
    }
}

@keyframes HeadingFade {
    from{
        transform: translateY(-100%);
        opacity: 0%;
    }
    to{
        transform: translateY(0);
        opacity: 100%;
    }
}

p {
    color: white;
    margin: 10px;
    font-family: 'Fira Code', monospace;
}

.overlay {
    position: absolute;
    top: 0px;
    left: 0px;
    display: grid;
    grid-template-columns: 20% auto 20%;
    grid-template-rows: 25% 60% 15%;
    width: calc(100% - 50px);
    height: calc(100% - 50px);
    border-style: solid;
    border-radius: 5px;
    border-width: 3px;
    border-color: rgba(256, 256, 256, 50%);
    z-index: 99 !important;
    margin: 20px;
}

.overlay .Titling{
    grid-column: 1 / span 3;
    grid-row: 1;
}

.overlay .Descriptor {
    padding: 10px;
    overflow-y: auto;
    background-color: rgba(75, 75, 75, 0.692);
    border-radius: 15px;
    grid-column: 3;
    grid-row: 2;
    margin: 10px;
    animation-name: InfoFade;
    animation-duration: 1.5s;
}

.overlay .Descriptor .newDescription {
    animation-name: InfoFade;
    animation-duration: 1s;
}

.fadeDescriptorOut{
    animation-name: fadeOut;
    animation-duration: .2s;
}

@keyframes fadeOut {
    to{
        opacity: 0%;
    }
}

@keyframes InfoFade {
    from{
        transform: translateX(100%);
        opacity: 0%;
    }
    to{
        transform: translateY(0);
        opacity: 100%;
    }
}

.overlay .ButtonMenu {
    padding: 10px;
    background-color: rgba(75, 75, 75, 0.692);
    border-radius: 15px;
    grid-column: 1;
    grid-row: 2;
    margin: 10px;
    animation-name: MenuFade;
    animation-duration: 1.5s;
}

@keyframes MenuFade {
    from{
        transform: translateX(-100%);
        opacity: 0%;
    }
    to{
        transform: translateY(0);
        opacity: 100%;
    }
}

.overlay .ButtonMenu .Button {
    display: block;
    font-size: 20px;
    font-family: 'Fira Code', monospace;
    color: white;
    background-color: rgba(240, 248, 255, 0);
    border-style: none;
    /* border-radius: 30px; */
    text-decoration-thickness: 3px;
    /* margin: 5px; */
    padding: 10px;
}

.overlay .ButtonMenu .Button:after {    
    background: none repeat scroll 0 0 transparent;
    bottom: 0;
    content: "";
    display: block;
    height: 3px;
    left: 50%;
    /* position: absolute; */
    background: white;
    transition: width 0.3s ease 0s, left 0.3s ease 0s;
    width: 0;
}
.overlay .ButtonMenu .Button:hover:after { 
    width: 100%; 
    height: 3px;
    left: 0; 
}

@keyframes ButtonHover {
    from{
        background-color: rgba(255, 255, 255, 0.308);
    }
    to{
        background-color: rgba(143, 143, 143, 0.308);
    }
}

.ProjectsContent {
    padding-left: 30px;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    font-size: 15px;
    font-family: 'Fira Code', monospace;
    color: white;
}

.DropdownItem {
    border: none;
    display: block;
    /* border-radius: 30px; */
    text-decoration-thickness: 3px;
    /* text-decoration-color: green; */
    font-size: 15px;
    font-family: 'Fira Code', monospace;
    background-color: rgba(240, 248, 255, 0);
    color: white;
    padding: 10px;
}

